--- a/Задача CSS Text/CSS/CSS.css
+++ b/Задача CSS Text/CSS/CSS.css
@@ -10,6 +10,7 @@ div {
 
 h1 {
     font-size: 1.8em;
+    line-height: 1.1;
 
 }
 
@@ -37,15 +38,12 @@ span {
     font-size: 1em;
 }
 
-span.text-color {
-    font-size: 1.2em;
-}
-
 .decoration {
     text-decoration: line-through;
 }
 
 .text-color {
     color: #378EB2;
+    font-weight: bold;
 }
 
